tests/sumo/tls/wauts/errors/cross3ltl_error_unknown_junction/errors.sumo
Error: TLS 'x' to switch in WAUT 'w1' was not yet defined.
Quitting (on error).
